--- a/MailDestinations.css
+++ b/MailDestinations.css
@@ -1,16 +1,73 @@
-div.MailPopOverlay {
+div#MailPop {
 	padding:40px;
-	width:576px;
 	display:none;
-	background-image:url(http://flowplayer.org/img/overlay/white.png) no-repeat;
+	background-image:url(images/overlay/white.png) no-repeat;
 }
 
-div.MailPopOverlay div.close {
-	background:url(http://flowplayer.org/img/overlay/close.png) no-repeat;
+div#MailPop div.close {
+	background:url(images/overlay/close.png) no-repeat;
 	position:absolute;
 	top:2px;
 	right:5px;
 	width:35px;
 	height:35px;
 	cursor:pointer;
+}
+
+table#MailPopTable {
+	width: 745px;
+	padding: 0;
+	margin: 0;
+	border-collapse:separate;
+}
+
+table#MailPopTable {
+	font-size:11px !important;		
+}
+
+table#MailPopTable.caption {
+	padding: 0 0 5px 0;
+	width: 700px;	 
+	text-align: right;
+	color: #4f6b72;
+	font-size:16px;
+}
+
+table#MailPopTable th {
+	color: #4f6b72;
+	border-right: 1px solid #C1DAD7;
+	border-bottom: 1px solid #C1DAD7;
+	border-top: 1px solid #C1DAD7;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+	text-align: left;
+	padding: 6px 6px 6px 12px;
+	background: #CAE8EA url(images/general/bg_header.jpg) no-repeat;
+	font-weight:bold;
+}
+
+table#MailPopTable th.nobg {
+	border-top: 0;
+	border-left: 0;
+	border-right: 1px solid #C1DAD7;
+	background: none;
+}
+
+table#MailPopTable td {
+	border-right: 1px solid #C1DAD7;
+	border-bottom: 1px solid #C1DAD7;
+	background: #fff;
+	padding: 6px 6px 6px 12px;
+	color: #4f6b72;
+}
+
+table#MailPopTable td img {
+	cursor:pointer;		
+}
+
+table#MailPopTable th.spec {
+	border-left: 1px solid #C1DAD7;
+	border-top: 0;
+	background: #fff url(images/general/bullet1.gif) no-repeat;
+	font: bold 10px "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
 }
